2017.11/_sources/plugins/available/feature-table/presence-absence.txt
presence-absence: Convert to presence/absence
=============================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime feature-table presence-absence [OPTIONS]

     Convert frequencies to binary values indicating presence or absence of a
     feature in a sample.

   Options:
     --i-table PATH                  Artifact: FeatureTable[Frequency |
                                     RelativeFrequency]  [required]
                                     The feature
                                     table to be converted into presence/absence
                                     abundances.
     --o-presence-absence-table PATH
                                     Artifact: FeatureTable[PresenceAbsence]
                                     [required if not passing --output-dir]
                                     The
                                     resulting presence/absence feature table.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Convert to presence/absence

   Convert frequencies to binary values indicating presence or absence of a
   feature in a sample.

   Parameters
   ----------
   table : FeatureTable[Frequency | RelativeFrequency]
       The feature table to be converted into presence/absence abundances.

   Returns
   -------
   presence_absence_table : FeatureTable[PresenceAbsence]
       The resulting presence/absence feature table.</pre>
       </div>
     </div>
   </div>